--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
             <div class="col-md-8 offset-md-2 col-sm-12 offset-sm-0">
                 
                 <div class="top_menu">
+                    
                     <ul class="navigation_menu">
-                        <li class="navigation"> <a class="point1" href='#'>Home</a></li>
-                        <li class="navigation"> <a class="point2" href='#'>About me</a></li>
-                        <li class="navigation"> <a class="point3"href='#'>Skills</a></li>
-                        <li class="navigation"> <a class="point4"href='#'>Portfolio</a></li>
-                        <li class="navigation"> <a class="point5"href='#'>Contacts</a></li>
-                    </ul>       
+                        <li class="navigation"> <a class="point1" href='#'>Home</a>     </li>
+                        <li class="navigation"> <a class="point2" href='#'>About me</a> </li>
+                        <li class="navigation"> <a class="point3" href='#'>Skills</a>   </li>
+                        <li class="navigation"> <a class="point4" href='#'>Portfolio</a> </li>
+                        <li class="navigation"> <a class="point5" href='#'>Contacts</a>  </li>
+                    </ul> 
+                    <div class="ham btn"> <img src="/img/ham.png" alt="Photo" width='70px' height="auto" > </div>     
                 </div>
 
                 <div class="header">
@@ -28,7 +30,11 @@
                     <div class="prof"> WEB developer<br> 27 years old, Crimea </div>
                     <div class="lang_switcher"> RU | ENG </div>
                 </div>
-                <div class="photo"> <img src="/img/6L_AU_M5zj4.jpg" alt="Photo" width='100%' height="auto"></div>
+
+                <div class="photo"> 
+                    <img src="/img/6L_AU_M5zj4.jpg" alt="Photo" width='100%' height="auto">
+                </div>
+
                 <div class="about_me" id='about_me_block'>
                     <h2 class="section_header">About me</h2>
                     <p>Hi, I'm Alex – Junior Web Developer.<br> I'm interested in Web and everything connected with it.<br><br> Yes! I'm just studying, but...<br><br>  ready to implement excellent projects with wonderful people.</p>
