--- a/index.html
+++ b/index.html
@@ -20,30 +20,34 @@
           
             <div class="top_menu">
             <ul class="navigation_menu">
-              <li class="navigation"><a class="point1" href="#">Home</a></li>
+              <li class="navigation"> 
+                  <button onclick="myFunction1()" class="btn" class='point1'>Home</button> </li>
               <li class="navigation">
-                <a class="point2" href="#">About me</a>
-              </li>
-              <li class="navigation"><a class="point3" href="#">Skills</a></li>
-              <li class="navigation">
-                <a class="point4" href="#">Portfolio</a>
+                    <button onclick="myFunction2()" class="btn" class='point2'>About me</button> </li>
               </li>
               <li class="navigation">
-                <a class="point5" href="#">Contacts</a>
+                <button onclick="myFunction3()" class="btn" class='point3'>Skills</button> </li>
+              <li class="navigation">
+                <button onclick="myFunction4()" class="btn" class='point4'>Portfolio</button> </li>
+              </li>
+              <li class="navigation">
+                <button onclick="myFunction5()" class="btn" class='point5'>Contacts</button> </li>
               </li>
             </ul>
-            <div class="ham btn">
-              <img src="/img/ham.png" alt="Photo" width="70px" height="auto" />
+            <div class="ham_row">
+              <div class="menu-icon open ham btn">
+                <span></span>
+              </div>
             </div>
           </div>
 
-          <div class="header">
+          <div class="header" id="point1_aim">
             <div class="name">Alexandr Polonchuk</div>
             <div class="prof">
               WEB developer<br />
               27 years old,<br> Crimea
             </div>
-            <div class="lang_switcher">RU | ENG</div>
+            <div class="lang_switcher"> <span class='ru active'>RU </span> |<span class='en'> ENG</span> </div>
           </div>
 
           <div class="photo">
@@ -55,7 +59,7 @@
             />
           </div>
 
-          <div class="about_me" id="about_me_block">
+          <div class="about_me" id="point2_aim">
             <h2 class="section_header">About me</h2>
             <p>
               Hi, I'm Alex – Junior Web Developer.<br />
@@ -65,7 +69,7 @@
             </p>
           </div>
 
-          <div class="skills">
+          <div class="skills" id='point3_aim'>
             <div class="section_header">Skills</div>
             <p>My knowledge today</p>
           </div>
@@ -178,7 +182,7 @@
 
       <div class="row">
         <div class="col-md-8 offset-md-2 col-sm-12 offset-sm-0 portfolio">
-          <div class="portfolio_header section_header">Portfolio</div>
+          <div class="portfolio_header section_header" id='point4_aim'>Portfolio</div>
 
           <div class="portfolio_item">
             <img src="/img/braun.png" alt="Photo" width="95%" height="auto" />
@@ -212,5 +216,17 @@
     ></script>
     <script src="/script.js"></script>
     <script src="/js/bootstrap.js"></script>
+
+    <script type="text/javascript">
+      sitePath = "/";
+      sflakesMax = 34;
+      sflakesMaxActive = 34;
+      svMaxX = 2;
+      svMaxY = 2;
+      ssnowStick = 0;
+      sfollowMouse = 1;
+      </script>
+      <script type="text/javascript" src="/snow/snow.js"></script>
+      
   </body>
 </html>
